--- a/pioner-kazino-industrii-skonchalsya-v-ssha.html
+++ b/pioner-kazino-industrii-skonchalsya-v-ssha.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Пионер казино-индустрии скончался в США.</title>
 <meta name="description" content="Пионер казино-индустрии скончался в США. Билл Беннет, пионер индустрии игровых домов, скончался 22 декабря, в воскресенье, на 79 году жизни. Ему принадлежал…">
-<link rel="canonical" href="https://casino-list.deno.dev/pioner-kazino-industrii-skonchalsya-v-ssha.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pioner-kazino-industrii-skonchalsya-v-ssha.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Пионер казино-индустрии скончался в США.</h1>
-<div class="card"><p>Пионер казино-индустрии скончался в США.<br><br><br><br>Билл Беннет, пионер индустрии игровых домов, скончался 22 декабря, в воскресенье, на 79 году жизни. Ему принадлежал отель-казино «Сахар», также Беннет известен как прежний председатель группы <a href="https://t.me/Vodka_fun_officiaL" target="_blank">https://t.me/Vodka_fun_officiaL</a> предприятий «Циркус-Циркус». Он был одним из ведущих операторов казино в Лас-Вегасе, имел контроль на несколькими отелями-казино в Городе Греха, неустанно дополняя их различными соблазнами, делая более заманчивыми для клиентов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p><a href="https://t.me/Vodka_fun_officiaL" target="_blank">https://t.me/Vodka_fun_officiaL</a> Пионер казино-индустрии скончался в США.<br><br><br><br>Билл Беннет, пионер индустрии игровых домов, скончался 22 декабря, в воскресенье, на 79 году жизни. Ему принадлежал отель-казино «Сахар», также Беннет известен как прежний председатель группы предприятий «Циркус-Циркус». Он был одним из ведущих операторов казино в Лас-Вегасе, имел контроль на несколькими отелями-казино в Городе Греха, неустанно дополняя их различными соблазнами, делая более заманчивыми для клиентов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-bons-ot-realnyh-igrokov-1.html">Отзывы о казино Bons от реальных игроков</a></li>
-<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
-<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-igry-v-shestikolodnyy-blekdzhek-dnevni.html">Особенности игры в шестиколодный блэкджек ✌ Дневник @Anna на</a></li>
+<li><a href="ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html">От возможности выигрыша итальянец попал в больницу</a></li>
+<li><a href="otzyvy-o-kazino-betway-ot-realnyh-igrokov.html">Отзывы о казино Betway от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
