--- a/plan-greektown-casino-po-vyhodu-iz-krizisa.html
+++ b/plan-greektown-casino-po-vyhodu-iz-krizisa.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>План Greektown Casino по выходу из кризиса</title>
 <meta name="description" content="План Greektown Casino по выходу из кризиса Как и множеству других, казино Greektown пришлось выбирать во время экономического кризиса свою альтернативу защи…">
-<link rel="canonical" href="https://casino-list.deno.dev/plan-greektown-casino-po-vyhodu-iz-krizisa.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plan-greektown-casino-po-vyhodu-iz-krizisa.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>План Greektown Casino по выходу из кризиса</h1>
-<div class="card"><p>План Greektown Casino <a href="https://t.me/Beton_guide_casinO" target="_blank">https://t.me/Beton_guide_casinO</a> по выходу из кризиса<br><br><br><br>Как и множеству других, казино Greektown пришлось выбирать во время экономического кризиса свою альтернативу защиты от банкротства. Как стало известно, на настоящий момент уже существует план, с помощью которого казино сможет к июню 2010 года выйти из сложившегося критического состояния. Кредиторы отдали на рассмотрение план, так что теперь предполагается осуществить ряд встреч, которые определят дальнейшую судьбу казино. Слушания о подтверждении нового плана начнутся с двенадцатого января, и, как ожидается, получат официальное подтверждение к концу января.<br>Одной из первых причин задержки стало упорство владельцев облигаций, которые задержали будущий доход казино. Соответственно условиям плана, держателям облигаций досталось бы 6% непривилегированных акций казино Greektown. К тому же они получили бы права на 4 185 миллионов долларов привилегированных акций, которые соответствуют количеству, принадлежащему владельцам облигаций в данный момент.<br>Остальные 94% казино достались бы другим компаниям. «Процесс проведения переговоров о купле-продаже является очень длительным процессом, но все-таки он ведется, - поведал финансовый эксперт компании Greektown Чак Мур. - Все стороны направляются к единой цели, которая способна приблизить выход казино из кризиса». Казино Лас-Вегаса и Атлантик-Сити - два крупнейших американских центра гемблинга, тоже рассматривают всевозможные варианты защиты от экономического кризиса.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>План Greektown Casino по выходу из кризиса<br><br><br><br>Как и множеству других, казино Greektown пришлось выбирать во время экономического кризиса свою альтернативу защиты от банкротства. Как стало известно, на настоящий момент уже существует план, с помощью которого казино сможет к июню 2010 года выйти из сложившегося критического состояния. Кредиторы отдали на рассмотрение план, так что теперь предполагается осуществить ряд встреч, которые определят дальнейшую судьбу казино. Слушания о подтверждении нового плана начнутся с двенадцатого января, и, как ожидается, получат официальное подтверждение к концу января.<br>Одной из первых причин задержки стало упорство владельцев облигаций, которые задержали будущий доход казино. Соответственно условиям плана, держателям облигаций досталось бы 6% непривилегированных акций казино Greektown. К тому же они получили бы права на 4 185 миллионов долларов привилегированных акций, которые соответствуют количеству, принадлежащему владельцам облигаций в данный момент.<br>Остальные 94% казино достались бы другим компаниям. «Процесс проведения переговоров о купле-продаже является очень длительным процессом, но все-таки он ведется, - поведал финансовый эксперт компании Greektown Чак Мур. - Все стороны направляются к <a href="https://t.me/Beton_guide_casinO" target="_blank">https://t.me/Beton_guide_casinO</a> единой цели, которая способна приблизить выход казино из кризиса». Казино Лас-Вегаса и Атлантик-Сити - два крупнейших американских центра гемблинга, тоже рассматривают всевозможные варианты защиты от экономического кризиса.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="ostorozhno-shulery-dnevnik-dima3-na.html">Осторожно! Шулеры! ✌ Дневник @Dima3 на</a></li>
-<li><a href="otzyvy-o-kazino-banzai-bet-ot-realnyh-igrokov.html">Отзывы о казино Banzai Bet от реальных игроков</a></li>
-<li><a href="osnovy-bankroll-menedzhmenta-dnevnik-anna-na.html">Основы банкролл менеджмента ✌ Дневник @Anna на</a></li>
+<li><a href="otzyvy-o-kazino-bounty-ot-realnyh-igrokov.html">Отзывы о казино Bounty от реальных игроков</a></li>
+<li><a href="osobennosti-kitayskih-kazino-oflayn-i-onlayn.html">Особенности китайских казино офлайн и онлайн</a></li>
+<li><a href="otzyvy-o-kazino-avocado-ot-realnyh-igrokov.html">Отзывы о казино Avocado от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
