--- a/planiruetsya-postroyka-esche-odnogo-desyatietazhno.html
+++ b/planiruetsya-postroyka-esche-odnogo-desyatietazhno.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планируется постройка еще одного десятиэтажного корпуса отеля племенем калиспеллов.</title>
 <meta name="description" content="Планируется постройка еще одного десятиэтажного корпуса отеля племенем калиспеллов. Решение о расширении было принято недавно. После постройки дополнительно…">
-<link rel="canonical" href="https://casino-list.deno.dev/planiruetsya-postroyka-esche-odnogo-desyatietazhno.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/planiruetsya-postroyka-esche-odnogo-desyatietazhno.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планируется постройка еще одного десятиэтажного корпуса отеля племенем калиспеллов.</h1>
-<div class="card"><p>Планируется постройка еще одного десятиэтажного корпуса отеля племенем калиспеллов.<br><br><br><br>Решение о расширении было принято недавно. <a href="https://t.me/Pharaon_Zone_official" target="_blank">https://t.me/Pharaon_Zone_official</a> После постройки дополнительного корпуса, вместительность гостиницы увеличится в полтора раза.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планируется постройка еще одного десятиэтажного <a href="https://t.me/Pharaon_Zone_official" target="_blank">https://t.me/Pharaon_Zone_official</a> корпуса отеля племенем калиспеллов.<br><br><br><br>Решение о расширении было принято недавно. После постройки дополнительного корпуса, вместительность гостиницы увеличится в полтора раза.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-betwinner-ot-realnyh-igrokov-1.html">Отзывы о казино Betwinner от реальных игроков</a></li>
-<li><a href="ostrov-sokrovisch-teper-pereedet-v-podolsk.html">Остров сокровищ теперь переедет в Подольск.</a></li>
-<li><a href="osobennosti-ruletki-hot-spot-dnevnik-olga1-na.html">Особенности рулетки Хот Спот ✌ Дневник @Olga1 на</a></li>
+<li><a href="osobennosti-onlayn-igry-v-blekdzhek-s-zhivym-krupe.html">Особенности онлайн игры в блэкджек с живым крупье ✌ Дневник @casino-x на</a></li>
+<li><a href="ostrov-actekov-ischem-klad-vmeste-dnevnik-anna-na.html">Остров Ацтеков: ищем клад вместе! ✌ Дневник @Anna на</a></li>
+<li><a href="otzyvy-o-kazino-bet-at-home-ot-realnyh-igrokov.html">Отзывы о казино Bet At Home от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
