--- a/plany-na-otkrytie-megakazino-v-shotlandii.html
+++ b/plany-na-otkrytie-megakazino-v-shotlandii.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы на открытие мегаказино в Шотландии</title>
 <meta name="description" content="Планы на открытие мегаказино в Шотландии Шотландцы собираются построить самое большое казино в стране, которое будет расположено в городе Абердин, для чего …">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-na-otkrytie-megakazino-v-shotlandii.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-na-otkrytie-megakazino-v-shotlandii.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планы на открытие мегаказино в Шотландии</h1>
-<div class="card"><p>Планы на <a href="https://t.me/Leebet_vip_official_Vip" target="_blank">https://t.me/Leebet_vip_official_Vip</a> открытие мегаказино в Шотландии<br><br><br><br>Шотландцы собираются построить самое большое казино в стране, которое будет расположено в городе Абердин, для чего будет разрушен известный ночной клуб "Амадеус". Владельцы этого клуба решили создать развлекательный центр наравне с лучшими игорными домами Лас-Вегаса, со своими отелем и казино.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планы на открытие мегаказино в Шотландии <a href="https://t.me/Leebet_vip_official_Vip" target="_blank">https://t.me/Leebet_vip_official_Vip</a><br><br><br><br>Шотландцы собираются построить самое большое казино в стране, которое будет расположено в городе Абердин, для чего будет разрушен известный ночной клуб "Амадеус". Владельцы этого клуба решили создать развлекательный центр наравне с лучшими игорными домами Лас-Вегаса, со своими отелем и казино.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-slotov-sizzling-hot-dnevnik-tamila1-na.html">Особенности слотов Sizzling Hot ✌ Дневник @Tamila1 на</a></li>
-<li><a href="otzyvy-o-kazino-bounty-ot-realnyh-igrokov.html">Отзывы о казино Bounty от реальных игроков</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
+<li><a href="otzyvy-o-kazino-7k-casino-ot-realnyh-igrokov.html">Отзывы о казино 7K Casino от реальных игроков</a></li>
+<li><a href="osobennosti-offlayn-puteshestviya-dnevnik-abstint-.html">Особенности оффлайн путешествия ✌ Дневник @Abstint на</a></li>
+<li><a href="ostrov-sokrovisch-teper-pereedet-v-podolsk.html">Остров сокровищ теперь переедет в Подольск.</a></li>
 </ul></div>
 </body>
 </html>
