--- a/plany-olega-boyko-na-bogatstvo.html
+++ b/plany-olega-boyko-na-bogatstvo.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы Олега Бойко на богатство</title>
 <meta name="description" content="Планы Олега Бойко на богатство Олег Бойко, который является российским миллиардером, в чьей собственности находится крупнейшая восточноевропейская игорная к…">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-olega-boyko-na-bogatstvo.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-olega-boyko-na-bogatstvo.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планы Олега Бойко на богатство</h1>
-<div class="card"><p>Планы Олега Бойко на богатство<br><br><br><br>Олег Бойко, который является российским миллиардером, в чьей собственности находится крупнейшая восточноевропейская игорная компания Ritzio Entertainment Group, планирует за текущий год выручить ещё около 1,5 миллиарда долларов. Корпорация Henderson Amusement Inc. постоянно оплачивала Тому Александру, шерифу округа Хейвуд, что бы он не <a href="https://t.me/Betchan_Review_official" target="_blank">https://t.me/Betchan_Review_official</a> замечал игровые автоматы, которые работают нелегально. 5 мая компания дала официальное подтверждение этому факту в процессе суда в городе Эшвилл.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планы <a href="https://t.me/Betchan_Review_official" target="_blank">https://t.me/Betchan_Review_official</a> Олега Бойко на богатство<br><br><br><br>Олег Бойко, который является российским миллиардером, в чьей собственности находится крупнейшая восточноевропейская игорная компания Ritzio Entertainment Group, планирует за текущий год выручить ещё около 1,5 миллиарда долларов. Корпорация Henderson Amusement Inc. постоянно оплачивала Тому Александру, шерифу округа Хейвуд, что бы он не замечал игровые автоматы, которые работают нелегально. 5 мая компания дала официальное подтверждение этому факту в процессе суда в городе Эшвилл.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-igornogo-biznesa-v-ukraine-dnevnik-olg.html">Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на</a></li>
-<li><a href="otzyvy-o-kazino-avocado-ot-realnyh-igrokov.html">Отзывы о казино Avocado от реальных игроков</a></li>
-<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-poker-avtomata-aces-and-faces-dnevnik-.html">Особенности покер автомата «Aces and Faces» ✌ Дневник @Dak89 на</a></li>
+<li><a href="ostrov-mavrikiy-otkryt-dlya-azartnyh-turistov-dnev.html">Остров Маврикий открыт для азартных туристов ✌ Дневник @Olga1 на</a></li>
+<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
 </ul></div>
 </body>
 </html>
