--- a/plany-otkryt-kazino-vmesto-istoricheskogo-muzeya.html
+++ b/plany-otkryt-kazino-vmesto-istoricheskogo-muzeya.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы открыть казино вместо исторического музея</title>
 <meta name="description" content="Планы открыть казино вместо исторического музея Представители Исторического музея в Сингапуре дали опровержение 2 апреля к статье напечатанной 1 апреля в га…">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-otkryt-kazino-vmesto-istoricheskogo-muzeya.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-otkryt-kazino-vmesto-istoricheskogo-muzeya.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планы открыть казино вместо исторического музея</h1>
-<div class="card"><p>Планы открыть казино вместо исторического музея<br><br><br><br>Представители Исторического музея в Сингапуре дали опровержение 2 <a href="https://t.me/LUTRAN_login_officiaL" target="_blank">https://t.me/LUTRAN_login_officiaL</a> апреля к статье напечатанной 1 апреля в газете "MediaCorp's Today", которая взволновала несколько миллионов людей. Это оказалось первоапрельской шуткой.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планы открыть казино вместо исторического музея<br><br><br><br>Представители Исторического музея <a href="https://t.me/LUTRAN_login_officiaL" target="_blank">https://t.me/LUTRAN_login_officiaL</a> в Сингапуре дали опровержение 2 апреля к статье напечатанной 1 апреля в газете "MediaCorp's Today", которая взволновала несколько миллионов людей. Это оказалось первоапрельской шуткой.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osnovy-bankroll-menedzhmenta-dnevnik-anna-na.html">Основы банкролл менеджмента ✌ Дневник @Anna на</a></li>
-<li><a href="otzyvy-o-kazino-1xbet-ot-realnyh-igrokov-1.html">Отзывы о казино 1xBet от реальных игроков</a></li>
-<li><a href="otel-s-kazino-na-laynere-koroleva-mariya.html">Отель с казино на лайнере «Королева Мария».</a></li>
+<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
+<li><a href="otzyvy-o-kazino-betera-ot-realnyh-igrokov-1.html">Отзывы о казино Betera от реальных игроков</a></li>
+<li><a href="osnovy-kartochnoy-igry-v-golf-dnevnik-ronik-na.html">Основы карточной игры в гольф ✌ Дневник @ronik на</a></li>
 </ul></div>
 </body>
 </html>
