--- a/plany-po-povysheniyu-nalogov-na-igornyy-biznes-v-i.html
+++ b/plany-po-povysheniyu-nalogov-na-igornyy-biznes-v-i.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы по повышению налогов на игорный бизнес в Ирландии</title>
 <meta name="description" content="Планы по повышению налогов на игорный бизнес в Ирландии Как следует из заявления министра финансов Ирландии Брайана Ленихана, есть возможность повышения нал…">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-po-povysheniyu-nalogov-na-igornyy-biznes-v-i.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-po-povysheniyu-nalogov-na-igornyy-biznes-v-i.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -18,9 +18,9 @@ ul { padding-left:18px; }
 <h1>Планы по повышению налогов на игорный бизнес в Ирландии</h1>
 <div class="card"><p>Планы по повышению налогов на игорный бизнес <a href="https://t.me/Vodka_fun_officiaL" target="_blank">https://t.me/Vodka_fun_officiaL</a> в Ирландии<br><br><br><br>Как следует из заявления министра финансов Ирландии Брайана Ленихана, есть возможность повышения налогов на игорный бизнес после изучения Минфином состояния виртуального казино.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobnyak-dlya-igrovyh-razvlecheniy-u-arbata.html">Особняк для игровых развлечений у Арбата</a></li>
-<li><a href="osnovnye-strahi-nachinayuschih-pokeristov-dnevnik-.html">Основные страхи начинающих покеристов ✌ Дневник @igor на</a></li>
-<li><a href="otzyvy-o-kazino-bounty-ot-realnyh-igrokov.html">Отзывы о казино Bounty от реальных игроков</a></li>
+<li><a href="otdyhat-azartno-mozhno-ekonomno-i-vygodno-dnevnik-.html">Отдыхать азартно можно экономно и выгодно ✌ Дневник @Dak89 на</a></li>
+<li><a href="osobennosti-onlayn-ruletok-dnevnik-igor-na.html">Особенности онлайн-рулеток ✌ Дневник @igor на</a></li>
+<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
 </ul></div>
 </body>
 </html>
