--- a/plany-po-stroitelstvu-kazino-v-minske.html
+++ b/plany-po-stroitelstvu-kazino-v-minske.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы по строительству казино в Минске.</title>
 <meta name="description" content="Планы по строительству казино в Минске. В Концепции развития белорусского игорного бизнеса, утвержденной постановлением от Совета Министров Белоруссии, шла …">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-po-stroitelstvu-kazino-v-minske.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-po-stroitelstvu-kazino-v-minske.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планы по строительству казино в Минске.</h1>
-<div class="card"><p>Планы по строительству казино в Минске.<br><br><br><br>В Концепции развития белорусского игорного бизнеса, утвержденной постановлением от Совета Министров Белоруссии, шла речь о том, что белорусское правительство ищет вкладчиков для строительства в Минске игорно-развлекательного комплекса неподалеку от аэропорта.<br><br>Предполагается, что возведение казино займет от <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> семи до десяти лет и потребует один миллиард долларов. Согласно мнению разработчиков этой концепции, игорный центр около аэропорта должен привлекать состоятельных гемблинг-любителей.<br><br>Власти для успешной реализации проекта планируют предоставлять инвесторам налоговые льготы. Помимо того, скорее всего иностранные игроки смогут посещать казино без визовых ограничений.<br><br>Как бы там ни было, эксперты сомневаются в рентабельности проекта. Факторами инвестиционного риска назвали низкую плотность населения, сезонность климата и отсутствие в стране должной туристической инфраструктуры.<br><br>Юлия присоединилась к команде  в 2010 году, став одним из первых авторов, кто системно освещал развитие онлайн-гемблинга в России и мире. За годы работы она создала тысячи материалов, фиксируя ключевые события: от легализации ставок в отдельных штатах США до появления первых криптовалютных казино.<br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планы по строительству казино в Минске.<br><br><br><br>В Концепции развития белорусского игорного бизнеса, утвержденной постановлением от Совета Министров Белоруссии, шла речь о том, что белорусское правительство ищет вкладчиков для строительства в Минске игорно-развлекательного комплекса неподалеку от аэропорта.<br><br>Предполагается, что возведение казино займет от  семи до десяти лет и  потребует один миллиард долларов. Согласно мнению разработчиков этой концепции, игорный центр около аэропорта должен привлекать состоятельных гемблинг-любителей.<br><br>Власти для успешной реализации проекта планируют предоставлять инвесторам налоговые льготы. Помимо того, скорее всего иностранные игроки смогут посещать казино без визовых ограничений.<br><br>Как бы там ни было, эксперты сомневаются в рентабельности проекта. Факторами инвестиционного риска назвали низкую плотность населения, сезонность климата и отсутствие в стране должной туристической инфраструктуры.<br><br>Юлия присоединилась к команде в 2010 году, став одним из первых авторов, кто <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> системно освещал развитие онлайн-гемблинга в России и мире. За годы работы она создала тысячи материалов, фиксируя ключевые события: от легализации ставок в отдельных штатах США до появления первых криптовалютных казино.<br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="ostorozhno-kazino-manipuliruet-igrokami-dnevnik-ig.html">Осторожно! Казино манипулирует игроками! ✌ Дневник @igor на</a></li>
-<li><a href="ostorozhno-dilery-dnevnik-dak89-na.html">Осторожно: дилеры ✌ Дневник @Dak89 на</a></li>
-<li><a href="osnovnye-pravila-ruletki-dnevnik-anna-na.html">Основные правила рулетки ✌ Дневник @Anna на</a></li>
+<li><a href="planirovanie-denezhnyh-resursov-dlya-poezdok-v-kaz.html">Планирование денежных ресурсов для поездок в казино ✌ Дневник @Helga на</a></li>
+<li><a href="plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html">Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.</a></li>
+<li><a href="pik-klubnogo-pokera-v-internet-setyah-skoro-spadet.html">Пик клубного покера в интернет-сетях скоро спадет</a></li>
 </ul></div>
 </body>
 </html>
