--- a/plata-s-odnogo-igrovogo-stola-v-kazino-v-kyrgyzsta.html
+++ b/plata-s-odnogo-igrovogo-stola-v-kazino-v-kyrgyzsta.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Плата с одного игрового стола в казино в Кыргызстане вырастет в 5 раз</title>
 <meta name="description" content="Плата с одного игрового стола в казино в Кыргызстане вырастет в 5 раз Тажикан Калимбетова, министр финансов Кыргызстана не так давно заявила, что, скорее вс…">
-<link rel="canonical" href="https://casino-list.deno.dev/plata-s-odnogo-igrovogo-stola-v-kazino-v-kyrgyzsta.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plata-s-odnogo-igrovogo-stola-v-kazino-v-kyrgyzsta.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Плата с одного игрового стола в казино в Кыргызстане вырастет в 5 раз</h1>
-<div class="card"><p>Плата с одного игрового стола в казино в Кыргызстане вырастет в 5 раз<br><br><br><br>Тажикан Калимбетова, министр финансов Кыргызстана не так давно заявила, что, скорее всего вскоре с каждого игрового стола плата будет увеличена в 5 раз. На сегодняшний день за каждый стол владельцы игорных заведений ежемесячно платят <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> 50 тысяч сомов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Плата с одного игрового стола в казино в Кыргызстане вырастет в 5 раз<br><br><br><br>Тажикан Калимбетова, министр финансов Кыргызстана не так давно заявила, что, скорее всего вскоре с <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> каждого игрового стола плата будет увеличена в 5 раз. На сегодняшний день за каждый стол владельцы игорных заведений ежемесячно платят 50 тысяч сомов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-betway-ot-realnyh-igrokov.html">Отзывы о казино Betway от реальных игроков</a></li>
-<li><a href="osobennosti-vip-programm-v-igornyh-zavedeniyah-onl.html">Особенности VIP-программ в игорных заведениях онлайн ✌ Дневник @Tamila1 на</a></li>
-<li><a href="osobennosti-kitayskih-kazino-oflayn-i-onlayn.html">Особенности китайских казино офлайн и онлайн</a></li>
+<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
+<li><a href="osobennosti-igornyh-pokoleniy-dnevnik-olia29-na.html">Особенности игорных поколений ✌ Дневник @Olia29 на</a></li>
+<li><a href="osnovnye-sekrety-onlayn-igrovyh-avtomatov-i-video-.html">Основные секреты онлайн игровых автоматов и видео-слотов ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
