--- a/plavuchee-kazino-pereedet-na-bereg.html
+++ b/plavuchee-kazino-pereedet-na-bereg.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Плавучее казино переедет на берег.</title>
 <meta name="description" content="Плавучее казино переедет на берег. Одно единственное речное казино Канада решило переехать на сушу. Игорное заведение "Gateway" расположилось у Нью-уэстминс…">
-<link rel="canonical" href="https://casino-list.deno.dev/plavuchee-kazino-pereedet-na-bereg.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plavuchee-kazino-pereedet-na-bereg.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Плавучее казино переедет на берег.</h1>
-<div class="card"><p>Плавучее казино переедет на берег.<br><br><br><br>Одно единственное речное казино Канада решило переехать на сушу. Игорное заведение "Gateway" расположилось у Нью-уэстминстерского причала в 1999 году и не имело конкурентов в <a href="https://t.me/Drip_Cash_casino" target="_blank">https://t.me/Drip_Cash_casino</a> своем роде. Но сейчас его собственники решают о дальнейшей судьбе игорного дома, направленной все же на закрытие деятельности. Из сообщения президента "Gateway", Дейва Гадхия, плавучий игорный дом стало трудно содержать, и обслуживать, в связи с чем он решил продать судно, а казино открыть уже на суше. Можно сделать выводы, что плавучее казино уже приговорено.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Плавучее казино переедет на берег.<br><br><br><br>Одно единственное речное казино Канада решило переехать на сушу. Игорное заведение "Gateway" расположилось у Нью-уэстминстерского причала в 1999 году и не имело конкурентов в своем роде. Но сейчас его собственники решают о дальнейшей судьбе игорного дома, направленной все же на закрытие деятельности. Из сообщения президента "Gateway", Дейва Гадхия, плавучий игорный дом стало трудно содержать, <a href="https://t.me/Drip_Cash_casino" target="_blank">https://t.me/Drip_Cash_casino</a> и обслуживать, в связи с чем он решил продать судно, а казино открыть уже на суше. Можно сделать выводы, что плавучее казино уже приговорено.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-igornyh-zavedeniy-s-mgnovennymi-vyplat.html">Особенности игорных заведений с мгновенными выплатами ✌ Дневник @igor на</a></li>
-<li><a href="otzyvy-o-kazino-bet-at-home-ot-realnyh-igrokov-1.html">Отзывы о казино Bet At Home от реальных игроков</a></li>
-<li><a href="otzyvy-o-kazino-bollywood-casino-ot-realnyh-igroko-1.html">Отзывы о казино Bollywood Casino от реальных игроков</a></li>
+<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
+<li><a href="osobennosti-professii-krupe-dnevnik-dak89-na.html">Особенности профессии крупье ✌ Дневник @Dak89 на</a></li>
+<li><a href="otzyvy-o-kazino-auf-ot-realnyh-igrokov-1.html">Отзывы о казино AUF от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
