--- a/plemya-navaho-budet-stroit-kazino.html
+++ b/plemya-navaho-budet-stroit-kazino.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Племя навахо будет строить казино</title>
 <meta name="description" content="Племя навахо будет строить казино Вождями племени навахо принято решение о строительстве первого казино в Черч Рок, штат Нью-Мехико. В апреле планируется за…">
-<link rel="canonical" href="https://casino-list.deno.dev/plemya-navaho-budet-stroit-kazino.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plemya-navaho-budet-stroit-kazino.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Племя навахо будет строить казино</h1>
-<div class="card"><p><a href="https://t.me/Jozz_Official_official" target="_blank">https://t.me/Jozz_Official_official</a> Племя навахо будет строить казино<br><br><br><br>Вождями племени навахо принято решение о строительстве первого казино в Черч Рок, штат Нью-Мехико. В апреле планируется заложить фундамент, а к осени казино будет открыто для приёма посетителей.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Племя навахо будет строить <a href="https://t.me/Jozz_Official_official" target="_blank">https://t.me/Jozz_Official_official</a> казино<br><br><br><br>Вождями племени навахо принято решение о строительстве первого казино в Черч Рок, штат Нью-Мехико. В апреле планируется заложить фундамент, а к осени казино будет открыто для приёма посетителей.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="plany-po-povysheniyu-nalogov-na-igornyy-biznes-v-i.html">Планы по повышению налогов на игорный бизнес в Ирландии</a></li>
-<li><a href="platezhi-na-igornyh-saytah-na-chto-stoit-obratit-v.html">Платежи на игорных сайтах: на что стоит обратить внимание? ✌ Дневник @JoyCasino на</a></li>
-<li><a href="piketirovanie-podpolnyh-igrovyh-klubov-v-penze.html">Пикетирование подпольных игровых клубов в Пензе</a></li>
+<li><a href="ot-pervobytnyh-razvlecheniy-do-segodnyashnih-kazin.html">От первобытных развлечений до сегодняшних казино ✌ Дневник @Olga1 на</a></li>
+<li><a href="plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html">Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.</a></li>
+<li><a href="ot-titan-casino-bonus-dlya-novichkov-5000-evro.html">От Titan Casino: бонус для новичков 5000 евро</a></li>
 </ul></div>
 </body>
 </html>
