--- a/pleyboy-rasshiryaet-svoyu-deyatelnost-v-makao-i-ve.html
+++ b/pleyboy-rasshiryaet-svoyu-deyatelnost-v-makao-i-ve.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Плейбой расширяет свою деятельность в Макао и Великобритании.</title>
 <meta name="description" content="Плейбой расширяет свою деятельность в Макао и Великобритании. В Макао и Лондоне компания Playboy Enterprises, которая славится своими развлечениями для взро…">
-<link rel="canonical" href="https://casino-list.deno.dev/pleyboy-rasshiryaet-svoyu-deyatelnost-v-makao-i-ve.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pleyboy-rasshiryaet-svoyu-deyatelnost-v-makao-i-ve.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -18,9 +18,9 @@ ul { padding-left:18px; }
 <h1>Плейбой расширяет свою деятельность в Макао и Великобритании.</h1>
 <div class="card"><p>Плейбой расширяет свою <a href="https://t.me/Drip_Cash_casino" target="_blank">https://t.me/Drip_Cash_casino</a> деятельность в Макао и Великобритании.<br><br><br><br>В Макао и Лондоне компания Playboy Enterprises, которая славится своими развлечениями для взрослых, планирует открыть сеть собственных игорных домов. Председатель компании и дочь родоначальника "Плейбоя" Хью Хефнера Кристи Хефнер, сообщила о том, что на данный момент времени проводятся с потенциальными компаньонами переговоры о вероятности общих действий.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html">От возможности выигрыша итальянец попал в больницу</a></li>
-<li><a href="oteli-v-kotoryh-ostanavlivayutsya-azartnye-bogachi.html">Отели, в которых останавливаются азартные богачи ✌ Дневник @JoyCasino на</a></li>
-<li><a href="plan-greektown-casino-po-vyhodu-iz-krizisa.html">План Greektown Casino по выходу из кризиса</a></li>
+<li><a href="osobennosti-onlayn-ruletok-dnevnik-igor-na.html">Особенности онлайн-рулеток ✌ Дневник @igor на</a></li>
+<li><a href="ot-titan-casino-bonus-dlya-novichkov-5000-evro.html">От Titan Casino: бонус для новичков 5000 евро</a></li>
+<li><a href="otzyvy-o-kazino-888starz-ot-realnyh-igrokov.html">Отзывы о казино 888starz от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
