--- a/po-sudu-otkrytie-kazino.html
+++ b/po-sudu-otkrytie-kazino.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>По суду открытие казино.</title>
 <meta name="description" content="По суду открытие казино. По суду в Красноярске Андрею Карнасевичу нужно будет открыть казино. Такое решение вынес судья из-за того, что бизнесмен два года н…">
-<link rel="canonical" href="https://casino-list.deno.dev/po-sudu-otkrytie-kazino.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/po-sudu-otkrytie-kazino.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>По суду открытие казино.</h1>
-<div class="card"><p>По суду открытие казино. <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a><br><br><br><br>По суду в Красноярске Андрею Карнасевичу нужно будет открыть казино. Такое решение вынес судья из-за того, что бизнесмен два года назад без предупреждения уволил оператора автоматов-«столбиков». А по закону работодатель обязан сообщить об увольнении сотруднику за два месяца.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>По суду открытие казино.<br><br><br><br>По суду в Красноярске Андрею Карнасевичу нужно будет открыть казино. Такое решение вынес судья из-за того, что бизнесмен два года назад без предупреждения уволил оператора автоматов-«столбиков». А по закону работодатель <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> обязан сообщить об увольнении сотруднику за два месяца.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-bons-ot-realnyh-igrokov.html">Отзывы о казино Bons от реальных игроков</a></li>
-<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
-<li><a href="plany-na-novye-proekty-kazino-v-moskve.html">Планы на новые проекты казино в Москве</a></li>
+<li><a href="ot-titan-casino-bonus-dlya-novichkov-5000-evro.html">От Titan Casino: бонус для новичков 5000 евро</a></li>
+<li><a href="osobennosti-populyarnyh-variaciy-blekdzheka-dnevni.html">Особенности популярных вариаций блэкджека ✌ Дневник @Dak89 на</a></li>
+<li><a href="oteli-s-igornymi-domami-v-sharm-el-sheyhe-dnevnik-.html">Отели с игорными домами в Шарм-эль-Шейхе ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
