--- a/po-volnam-floatinga-dnevnik-volucara-na.html
+++ b/po-volnam-floatinga-dnevnik-volucara-na.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>По волнам Флоатинга ✌ Дневник @Volucara на</title>
 <meta name="description" content="По волнам Флоатинга ✌ Дневник @Volucara на Данный материал посвящен изучению такого интересного обманного покерного приема, как флоатинг. Я ужеупоминал о не…">
-<link rel="canonical" href="https://casino-list.deno.dev/po-volnam-floatinga-dnevnik-volucara-na.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/po-volnam-floatinga-dnevnik-volucara-na.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>По волнам Флоатинга ✌ Дневник @Volucara на</h1>
-<div class="card"><p>По волнам Флоатинга ✌ Дневник @Volucara на <br><br><br><br>Данный материал посвящен изучению такого интересного обманного покерного приема, как флоатинг. Я ужеупоминал о немкогда-то, теперь хочу поговорить о нем подробнее.<br><br>Флоатинг – по сути, блеф. Большинству новичкам он кажется простым и безобидным.<br><br>Вышеперечисленные действия существенно повлияют на игру оппонента, гораздо сильнее, чем обычный блеф. <a href="https://t.me/Vovan_free_officiaL" target="_blank">https://t.me/Vovan_free_officiaL</a> Существует огромная вероятность того, что оппонент, отвечая на Вашу ставку на терне, бросит в пам свою сильную руку, например, топовую пару и старшего кикера, или несколько средних пар.<br><br>Для того, чтобы результат флоатинга порадовал, необходимо относиться к этому покерному приему со всей серьезностью, а также соблюдать несколько основных условий. Далее перечислим требования, выполняя которые Ваш флоатинг будет на высоте.<br><br><br><br><br><br><br> </p></div>
+<div class="card"><p><a href="https://t.me/Vovan_free_officiaL" target="_blank">https://t.me/Vovan_free_officiaL</a> По волнам Флоатинга ✌ Дневник @Volucara на<br><br><br><br>Данный материал посвящен изучению такого интересного обманного покерного приема, как флоатинг. Я ужеупоминал о немкогда-то, теперь хочу поговорить о нем подробнее.<br><br>Флоатинг – по сути, блеф. Большинству новичкам он кажется простым и безобидным.<br><br>Вышеперечисленные действия существенно повлияют на игру оппонента, гораздо сильнее, чем обычный блеф. Существует огромная вероятность того, что оппонент, отвечая на Вашу ставку на терне, бросит в пам свою сильную руку, например, топовую пару и старшего кикера, или несколько средних пар.<br><br>Для того, чтобы результат флоатинга порадовал, необходимо относиться к этому покерному приему со всей серьезностью, а также соблюдать несколько основных условий. Далее перечислим требования, выполняя которые Ваш флоатинг будет на высоте.<br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-bitcoin-games-ot-realnyh-igrokov-1.html">Отзывы о казино Bitcoin Games от реальных игроков</a></li>
-<li><a href="piratskiy-igrovoy-avtomat-lost-island-dnevnik-casi.html">Пиратский игровой автомат Lost Island ✌ Дневник @CasinoSlava на</a></li>
-<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
+<li><a href="otzyvy-o-kazino-betera-ot-realnyh-igrokov.html">Отзывы о казино Betera от реальных игроков</a></li>
+<li><a href="plany-na-otkrytie-megakazino-v-shotlandii.html">Планы на открытие мегаказино в Шотландии</a></li>
+<li><a href="otzyvy-o-kazino-7k-casino-ot-realnyh-igrokov.html">Отзывы о казино 7K Casino от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
