--- a/pobeda-maykla-o-sallivana-na-irish-winter-festival.html
+++ b/pobeda-maykla-o-sallivana-na-irish-winter-festival.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победа Майкла О’Салливана на Irish Winter Festival</title>
 <meta name="description" content="Победа Майкла О’Салливана на Irish Winter Festival На редкость наэлектризованным выдался Irish Winter Festival. Нервы всех зрителей были напряженны до преде…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeda-maykla-o-sallivana-na-irish-winter-festival.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeda-maykla-o-sallivana-na-irish-winter-festival.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победа Майкла О’Салливана на Irish Winter Festival</h1>
-<div class="card"><p>Победа Майкла О’Салливана на Irish Winter Festival<br><br><br><br>На редкость наэлектризованным выдался Irish Winter Festival. Нервы всех зрителей были напряженны до предела. Даже самых бесстрастных болельщиков заставила поволноваться игра за финальным столом. В турнире с бай-ином 1 650 участвовали 397 игроков, накопив призовой фонд в 597 тысяч евро.<br>Выплаты получили сорок игроков. Пятое место занял Игорь Курганов, вслед за ним шел Матедж Кокалж, <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> с крупным стэком в начале финального стола. Ирландцы Майкл О'Салливан, Гари Мили и Майкл Мёрфи сошлись в битве за главный приз в 143 тысячи евро. В хэдз-ап матче друг против друга вышли О'Салливан и Мёрфи. Победителем турнира Irish Winter Festival стал студент 24 лет, который в основном играл за кэш-столами онлайн. Так что теперь к его достижениям прибавился еще и трофей знаменитого турнира.<br> По окончанию финального стола были известны такие результаты: первое место занял Майкл О'Салливан, выиграв 143 000 евро, второе -  Майкл Мёрфи с 88 500 евро, на третьем оказался Гари Мили с сумой в 55 300. Матедж Кокалж выиграл 44 800 и занял четвертое место. Соответственно, Игорь Курганов получил пятое место и 35 900, Стивен Девлин – шестое и 28 400, Пол Дули – седьмое и 22 400, Грэхэм Мастерс – восьмое и 17 900, а Джон Кэссиди – девятое и 13 500 евро.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победа Майкла О’Салливана на Irish Winter Festival<br><br><br><br>На редкость наэлектризованным выдался Irish Winter Festival. Нервы всех зрителей были напряженны до предела. Даже самых бесстрастных болельщиков заставила поволноваться игра за финальным столом. В турнире с бай-ином 1 650 участвовали 397 игроков, накопив призовой фонд <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> в 597 тысяч евро.<br>Выплаты получили сорок игроков. Пятое место занял Игорь Курганов, вслед за ним шел  Матедж Кокалж, с крупным стэком в начале финального стола. Ирландцы Майкл О'Салливан, Гари Мили и Майкл Мёрфи сошлись в битве за главный приз в 143 тысячи евро. В хэдз-ап матче друг против друга вышли О'Салливан и Мёрфи. Победителем турнира Irish Winter Festival стал студент 24 лет, который в основном играл за кэш-столами онлайн. Так что теперь к его достижениям прибавился еще и трофей знаменитого турнира.<br> По окончанию финального стола были известны такие результаты: первое место занял Майкл О'Салливан, выиграв 143 000 евро, второе -  Майкл Мёрфи с 88 500 евро, на третьем оказался Гари Мили с сумой в 55 300. Матедж Кокалж выиграл 44 800 и занял четвертое место. Соответственно, Игорь Курганов получил пятое место и 35 900, Стивен Девлин – шестое и 28 400, Пол Дули – седьмое и 22 400, Грэхэм Мастерс – восьмое и 17 900, а Джон Кэссиди – девятое и 13 500 евро.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osnovnye-pravila-ruletki-dnevnik-anna-na.html">Основные правила рулетки ✌ Дневник @Anna на</a></li>
-<li><a href="plany-investorov-na-azov-siti.html">Планы инвесторов на «Азов-Сити»</a></li>
-<li><a href="pit-ili-ne-pit-dnevnik-ikvulkan-na.html">Пить или не пить? ✌ Дневник @IkVulkan на</a></li>
+<li><a href="ostorozhno-fishing-stop-moshennichestvu-dnevnik-ma.html">Осторожно фишинг. Стоп мошенничеству ✌ Дневник @Maks8 на</a></li>
+<li><a href="osobennosti-poker-avtomata-aces-and-faces-dnevnik-.html">Особенности покер автомата «Aces and Faces» ✌ Дневник @Dak89 на</a></li>
+<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
