--- a/pobeda-zaklyuchennogo-v-lotereyu.html
+++ b/pobeda-zaklyuchennogo-v-lotereyu.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победа заключенного в лотерею</title>
 <meta name="description" content="Победа заключенного в лотерею По сообщению Би-Би-Си человек, который за сексуальное насилие отбывал пожизненное заключение, выиграл приз в Национальной лоте…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeda-zaklyuchennogo-v-lotereyu.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeda-zaklyuchennogo-v-lotereyu.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победа заключенного в лотерею</h1>
-<div class="card"><p>Победа заключенного в лотерею<br><br><br><br>По сообщению Би-Би-Си человек, который за сексуальное насилие отбывал пожизненное заключение, выиграл приз в Национальной лотереи Великобритании, который составил 7 <a href="https://t.me/New_Retro_Vip_casino" target="_blank">https://t.me/New_Retro_Vip_casino</a> миллионов фунтов стерлингов. Ирвута Хоара, 52-х летнего заключенного, за хорошее поведение временно освободили из тюрьмы. Тогда же находясь на свободе, он и приобрел этот выигрышный билет.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победа заключенного <a href="https://t.me/New_Retro_Vip_casino" target="_blank">https://t.me/New_Retro_Vip_casino</a> в лотерею<br><br><br><br>По сообщению Би-Би-Си человек, который за сексуальное насилие отбывал пожизненное заключение, выиграл приз в Национальной лотереи Великобритании, который составил 7 миллионов фунтов стерлингов. Ирвута Хоара, 52-х летнего заключенного, за хорошее поведение временно освободили из тюрьмы. Тогда же находясь на свободе, он и приобрел этот выигрышный билет.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-bitcoin-games-ot-realnyh-igrokov-1.html">Отзывы о казино Bitcoin Games от реальных игроков</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-centralno-aziatskom.html">Особенности игорного бизнеса в центрально-азиатском регионе ✌ Дневник @Tamila1 на</a></li>
-<li><a href="planiruetsya-li-obedinenie-rynkov-onlayn-azartnyh-.html">Планируется ли объединение рынков онлайн азартных игр?</a></li>
+<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
+<li><a href="pobeda-maykla-o-sallivana-na-irish-winter-festival.html">Победа Майкла О’Салливана на Irish Winter Festival</a></li>
+<li><a href="osobennosti-ruletki-hot-spot-dnevnik-olga1-na.html">Особенности рулетки Хот Спот ✌ Дневник @Olga1 на</a></li>
 </ul></div>
 </body>
 </html>
