--- a/pobeditel-nayden-mersedes-otdan.html
+++ b/pobeditel-nayden-mersedes-otdan.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победитель найден: Мерседес отдан.</title>
 <meta name="description" content="Победитель найден: Мерседес отдан. В ночь с 20 на 21 мая одним счастливчиком стало больше, поскольку везучий и удачливый гость игровых автоматов "Еврослот" …">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeditel-nayden-mersedes-otdan.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeditel-nayden-mersedes-otdan.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победитель найден: Мерседес отдан.</h1>
-<div class="card"><p>Победитель найден: <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> Мерседес отдан.<br><br><br><br>В ночь с 20 на 21 мая одним счастливчиком стало больше, поскольку везучий и удачливый гость игровых автоматов "Еврослот" получил Mercedes E 200 Kompressor. Автомобиль был разыгран с помощью специального лототрона в котором находились билеты. В результате выпавший шарик в рулетке под номером 25 принес счастливчику автомобиль, поскольку он поставил ставку именно на это число. Также в эту ночь кроме автомобиля Mercedes E 200 Kompressor , гости "Еврослота" выиграли больше пяти джекпотов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победитель найден: Мерседес отдан.<br><br><br><br>В ночь с 20 на 21 мая одним счастливчиком стало больше, поскольку везучий и удачливый гость игровых автоматов "Еврослот" получил Mercedes E 200 Kompressor. Автомобиль был разыгран <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> с помощью специального лототрона в котором находились билеты. В результате выпавший шарик в рулетке под номером 25 принес счастливчику автомобиль, поскольку он поставил ставку именно на это число. Также в эту ночь кроме автомобиля Mercedes E 200 Kompressor , гости "Еврослота" выиграли больше пяти джекпотов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="pobeda-zaklyuchennogo-v-lotereyu.html">Победа заключенного в лотерею</a></li>
-<li><a href="pobeda-igroka-v-sude-las-vegasa.html">Победа игрока в суде Лас-Вегаса</a></li>
-<li><a href="otzyvy-o-kazino-betwinner-ot-realnyh-igrokov.html">Отзывы о казино Betwinner от реальных игроков</a></li>
+<li><a href="pobedil-li-vash-vyigrysh.html">Победил ли ваш выигрыш?</a></li>
+<li><a href="osnovnye-sekrety-onlayn-igrovyh-avtomatov-i-video-.html">Основные секреты онлайн игровых автоматов и видео-слотов ✌ Дневник @Tamila1 на</a></li>
+<li><a href="ostrov-mavrikiy-otkryt-dlya-azartnyh-turistov-dnev.html">Остров Маврикий открыт для азартных туристов ✌ Дневник @Olga1 на</a></li>
 </ul></div>
 </body>
 </html>
