--- a/pobeditel-poluchit-na-800-000-funtov-menshe.html
+++ b/pobeditel-poluchit-na-800-000-funtov-menshe.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победитель получит на 800 000 фунтов меньше</title>
 <meta name="description" content="Победитель получит на 800 000 фунтов меньше Компьютерный сбой послужил причиной уменьшения британской Национальной лотереей суммы джек-пота. Победителюв дан…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeditel-poluchit-na-800-000-funtov-menshe.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeditel-poluchit-na-800-000-funtov-menshe.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победитель получит на 800 000 фунтов меньше</h1>
-<div class="card"><p>Победитель получит на 800 000 фунтов меньше<br><br><br><br>Компьютерный сбой послужил причиной уменьшения британской Национальной лотереей суммы джек-пота. Победителюв данной ситуации выдадут лишь 3,4 миллиона <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> фунтов вместо 4,2 миллионов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победитель получит на 800 000 фунтов меньше<br><br><br><br>Компьютерный сбой послужил причиной уменьшения британской Национальной лотереей суммы джек-пота. Победителюв <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> данной ситуации выдадут лишь 3,4 миллиона фунтов вместо 4,2 миллионов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-igornogo-biznesa-v-zapadnoevropeyskih-.html">Особенности игорного бизнеса в западноевропейских странах ✌ Дневник @Tamila1 на</a></li>
-<li><a href="otzyvy-o-kazino-bet-at-home-ot-realnyh-igrokov.html">Отзывы о казино Bet At Home от реальных игроков</a></li>
-<li><a href="ostrov-mavrikiy-otkryt-dlya-azartnyh-turistov-dnev.html">Остров Маврикий открыт для азартных туристов ✌ Дневник @Olga1 на</a></li>
+<li><a href="osuzhdenie-inspektora-za-prodazhu-fishek-iz-kazino.html">Осуждение инспектора за продажу фишек из казино</a></li>
+<li><a href="po-sudu-otkrytie-kazino.html">По суду открытие казино.</a></li>
+<li><a href="plany-pervogo-investora-igornoy-zony-azov-siti.html">Планы первого инвестора игорной зоны "Азов-Сити"</a></li>
 </ul></div>
 </body>
 </html>
