--- a/pobeditel-umer-ot-vyigrysha.html
+++ b/pobeditel-umer-ot-vyigrysha.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победитель умер от выигрыша</title>
 <meta name="description" content="Победитель умер от выигрыша К длительному сроку тюремного заключения приговорены две гражданки города Лас-Вегас по обвинению в преднамеренном убийстве. Днем…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeditel-umer-ot-vyigrysha.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeditel-umer-ot-vyigrysha.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победитель умер от выигрыша</h1>
-<div class="card"><p>Победитель умер от выигрыша<br><br><br><br>К длительному сроку тюремного заключения приговорены две гражданки города Лас-Вегас по обвинению в преднамеренном убийстве. <a href="https://t.me/Irwin_tg_casinO" target="_blank">https://t.me/Irwin_tg_casinO</a> Днем 25 января 2003 года Бриджит Паскуа, 25 лет, и Кимберли Крофорд, 26 лет, пробрались в жилище Дейла Апсона, который незадолго до этого выиграл на тотализаторе крупную сумму денег (44 000 долларов) и сообщил эту радостную новость девушкам. Он еще не успел забрать деньги. Дейла связали и учинили ему допрос, но он не сознался, куда спрятал билет, тогда его стали пытать. Истязание продолжали в течение восьми часов, при этом садистки курили наркотики. Паскуа приказала, чтобы Крофорд ударила его молотком по голове, думая, что это заставит говорить несчастного. Но девушка не рассчитала свои силы и этот удар оказался последним в жизни Дейла. Билет убийцы так и не нашли.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победитель умер от выигрыша<br><br><br><br>К длительному сроку тюремного заключения приговорены две гражданки города Лас-Вегас по обвинению в преднамеренном убийстве. Днем 25 января 2003 года Бриджит Паскуа, 25 лет, и Кимберли Крофорд, 26 лет, пробрались в жилище Дейла Апсона, который незадолго до этого выиграл на тотализаторе крупную сумму денег (44 000 долларов) и сообщил эту радостную новость девушкам. Он еще не успел забрать деньги. Дейла связали и учинили ему <a href="https://t.me/Irwin_tg_casinO" target="_blank">https://t.me/Irwin_tg_casinO</a> допрос, но он не сознался, куда спрятал билет, тогда его стали пытать. Истязание продолжали в течение восьми часов, при этом садистки курили наркотики. Паскуа приказала, чтобы Крофорд ударила его молотком по голове, думая, что это заставит говорить несчастного. Но девушка не рассчитала свои силы и этот удар оказался последним в жизни Дейла. Билет убийцы так и не нашли.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-avocado-ot-realnyh-igrokov-2.html">Отзывы о казино Avocado от реальных игроков</a></li>
-<li><a href="oteli-v-kotoryh-ostanavlivayutsya-azartnye-bogachi.html">Отели, в которых останавливаются азартные богачи ✌ Дневник @JoyCasino на</a></li>
-<li><a href="plany-na-novye-proekty-kazino-v-moskve.html">Планы на новые проекты казино в Москве</a></li>
+<li><a href="osnovy-igry-v-blekdzhek-dnevnik-ronik-na.html">Основы игры в блэкджек ✌ Дневник @ronik на</a></li>
+<li><a href="ot-vozmozhnosti-vyigrysha-italyanec-popal-v-bolnic.html">От возможности выигрыша итальянец попал в больницу</a></li>
+<li><a href="plany-investorov-na-azov-siti.html">Планы инвесторов на «Азов-Сити»</a></li>
 </ul></div>
 </body>
 </html>
