--- a/pobeditelem-v-ftops-stal-rossiyanin-maksim-lykov-d.html
+++ b/pobeditelem-v-ftops-stal-rossiyanin-maksim-lykov-d.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победителем в «FTOPS» стал россиянин Максим Лыков ✌ Дневник @igor на</title>
 <meta name="description" content="Победителем в «FTOPS» стал россиянин Максим Лыков ✌ Дневник @igor на Недавно в социальных сетях облетела новость, о том, что Макс Лыков наконец-то выиграл «…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeditelem-v-ftops-stal-rossiyanin-maksim-lykov-d.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeditelem-v-ftops-stal-rossiyanin-maksim-lykov-d.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победителем в «FTOPS» стал россиянин Максим Лыков ✌ Дневник @igor на</h1>
-<div class="card"><p>Победителем в «FTOPS» стал россиянин Максим Лыков ✌ Дневник @igor на <br><br><br><br>Недавно в социальных сетях облетела новость, о том, что Макс Лыков наконец-то выиграл «FTOPS».<br><br>ПОБЕДА В УПОРСТВЕ ИЛИ В ИГРЕ <a href="https://t.me/Ramenbet_Free_official" target="_blank">https://t.me/Ramenbet_Free_official</a> РАЗУМА?<br><br>Напомним, что Максим не первый год впокереи много раз уже занимал призовые позиции. Например, в 2008 году в финале турнира уступил первенство покерному мастеру Амиту Макидже. Но годы упорных игр и неудач уже позади.<br><br>Кстати, в мире российского покера именно Максим получил первое золото. От души поздравляем и желаем дальнейших успехов на поприще великой игре разума!<br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победителем в «FTOPS» стал россиянин Максим Лыков ✌ Дневник @igor на <br><br><br><br>Недавно в социальных сетях облетела новость, о том, что Макс Лыков наконец-то выиграл «FTOPS».<br><br>ПОБЕДА В УПОРСТВЕ ИЛИ В ИГРЕ РАЗУМА?<br><br>Напомним, что Максим не первый год впокереи много раз уже занимал призовые позиции. Например, в 2008 году в финале турнира уступил первенство покерному мастеру Амиту Макидже. <a href="https://t.me/Ramenbet_Free_official" target="_blank">https://t.me/Ramenbet_Free_official</a> Но годы упорных игр и неудач уже позади.<br><br>Кстати, в мире российского покера именно Максим получил первое золото. От души поздравляем и желаем дальнейших успехов на поприще великой игре разума!<br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otdyhat-azartno-mozhno-ekonomno-i-vygodno-dnevnik-.html">Отдыхать азартно можно экономно и выгодно ✌ Дневник @Dak89 на</a></li>
-<li><a href="osobennosti-onlayn-ruletok-dnevnik-igor-na.html">Особенности онлайн-рулеток ✌ Дневник @igor на</a></li>
-<li><a href="plyusy-i-minusy-kazino-s-besplatnym-bonusom.html">Плюсы и минусы казино с бесплатным бонусом:</a></li>
+<li><a href="osobennosti-raboty-v-igornom-dome-ili-budni-dilera.html">Особенности работы в игорном доме или будни дилера ✌ Дневник @casino-x на</a></li>
+<li><a href="plohie-privychki-igrokov-dnevnik-maks8-na.html">Плохие привычки игроков ✌ Дневник @Maks8 на</a></li>
+<li><a href="plody-nezavisimosti-ili-za-chto-borolis.html">Плоды независимости, или За что боролись…</a></li>
 </ul></div>
 </body>
 </html>
