--- a/pobeditelnica-loterei-delis-vyigryshem-s-prodavcam.html
+++ b/pobeditelnica-loterei-delis-vyigryshem-s-prodavcam.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победительница лотереи делись выигрышем с продавцами билетов</title>
 <meta name="description" content="Победительница лотереи делись выигрышем с продавцами билетов Сорвав лотерейный джек-пот в один миллион, женщина из США подарила по пятьдесят долларов каждом…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeditelnica-loterei-delis-vyigryshem-s-prodavcam.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeditelnica-loterei-delis-vyigryshem-s-prodavcam.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победительница лотереи делись выигрышем с продавцами билетов</h1>
-<div class="card"><p>Победительница лотереи делись выигрышем с продавцами билетов<br><br><br><br>Сорвав лотерейный <a href="https://t.me/Lux_center_casinO" target="_blank">https://t.me/Lux_center_casinO</a> джек-пот в один миллион, женщина из США подарила по пятьдесят долларов каждому сотруднику минимаркета, в котором она купила счастливый выигрышный билет.<br><br>«Я частенько захожу в этот магазин и не представляю без него своей жизни. Мне будет приятно, если его служащие также смогут отпраздновать мою победу», - пояснила свой благородный жест девушка.<br><br>Помимо денежного приза от победительницы, продавцы получат по пятьдесят долларов от директора маркета, принявшего решение отдать комиссионное вознаграждение лотерейного оператора (0,5% от суммы выигрыша) работникам.<br><br>«Это впервые наш клиент выиграл крупный приз в лотерею. Естественно, значительный выигрыш вместе со щедростью нашей покупательницы запомниться надолго»,- рассказал владелец минимаркета Деннис Дарлинг.<br><br>Как заявила победительница лотереи, также она намерена отдать часть выигрыша родственникам и друзьям, которым не помешает финансовая поддержка.<br><br>«Если делиться добром, рано или поздно оно обязательно вернется», - сказала счастливица.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победительница лотереи делись выигрышем с продавцами билетов<br><br><br><br>Сорвав лотерейный джек-пот в один миллион, женщина из США подарила по пятьдесят долларов каждому сотруднику минимаркета, в котором она купила счастливый выигрышный билет.<br><br>«Я частенько захожу в этот магазин и не представляю без него своей жизни. Мне будет приятно, если его служащие также смогут отпраздновать мою победу», - пояснила свой благородный жест девушка.<br><br>Помимо денежного приза от победительницы, продавцы получат по пятьдесят долларов от директора маркета, принявшего решение отдать комиссионное вознаграждение лотерейного оператора (0,5% от суммы выигрыша) работникам.<br><br>«Это впервые наш клиент выиграл крупный приз в лотерею. Естественно, значительный выигрыш вместе со щедростью нашей покупательницы запомниться надолго»,- рассказал владелец минимаркета Деннис Дарлинг.<br><br>Как заявила победительница лотереи, также она намерена отдать <a href="https://t.me/Lux_center_casinO" target="_blank">https://t.me/Lux_center_casinO</a> часть выигрыша родственникам и друзьям, которым не помешает финансовая поддержка.<br><br>«Если делиться добром, рано или поздно оно обязательно вернется», - сказала счастливица.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-razdachi-ochkov-loyalnosti-v-igrah-kaz.html">Особенности раздачи очков лояльности в играх казино ✌ Дневник @igor на</a></li>
-<li><a href="pleytek-prezentovali-novyy-produkt-cash-blox-dnevn.html">Плейтек презентовали новый продукт Cash Blox ✌ Дневник @Dak89 на</a></li>
-<li><a href="pink-dzhek-novaya-versiya-blek-dzheka-s-uporom-na-.html">Пинк-джек – новая версия блек-джека с упором на благотворительность ✌ Дневник @NetGame на</a></li>
+<li><a href="osobennosti-igornyh-pokoleniy-dnevnik-olia29-na.html">Особенности игорных поколений ✌ Дневник @Olia29 на</a></li>
+<li><a href="pobeda-zaklyuchennogo-v-lotereyu.html">Победа заключенного в лотерею</a></li>
+<li><a href="otzyvy-o-kazino-bounty-ot-realnyh-igrokov.html">Отзывы о казино Bounty от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
