--- a/plany-na-novye-proekty-kazino-v-moskve.html
+++ b/plany-na-novye-proekty-kazino-v-moskve.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы на новые проекты казино в Москве</title>
 <meta name="description" content="Планы на новые проекты казино в Москве С каждым днем все большим вниманием предпринимателей пользуется игорный рынок Москвы. К тому же если численность откр…">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-na-novye-proekty-kazino-v-moskve.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-na-novye-proekty-kazino-v-moskve.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планы на новые проекты казино в Москве</h1>
-<div class="card"><p>Планы <a href="https://t.me/Banda_online_casino_Vip" target="_blank">https://t.me/Banda_online_casino_Vip</a> на новые проекты казино в Москве<br><br><br><br>С каждым днем все большим вниманием предпринимателей пользуется игорный рынок Москвы. К тому же если численность открывающихся столичных залов игровых автоматов все труднее прогнозировать и точно подсчитывать, то казино наоборот более открытый бизнес. Численность московских игорных домов всегда около 50, что зачастую регламентируется рынком и здравой конкуренцией.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планы на новые проекты <a href="https://t.me/Banda_online_casino_Vip" target="_blank">https://t.me/Banda_online_casino_Vip</a> казино в Москве<br><br><br><br>С каждым днем все большим вниманием предпринимателей пользуется игорный рынок Москвы. К тому же если численность открывающихся столичных залов игровых автоматов все труднее прогнозировать и точно подсчитывать, то казино наоборот более открытый бизнес. Численность московских игорных домов всегда около 50, что зачастую регламентируется рынком и здравой конкуренцией.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-razdachi-ochkov-loyalnosti-v-igrah-kaz.html">Особенности раздачи очков лояльности в играх казино ✌ Дневник @igor на</a></li>
-<li><a href="otzyvy-o-kazino-bounty-ot-realnyh-igrokov.html">Отзывы о казино Bounty от реальных игроков</a></li>
-<li><a href="osobnyak-dlya-igrovyh-razvlecheniy-u-arbata.html">Особняк для игровых развлечений у Арбата</a></li>
+<li><a href="otzyvy-o-kazino-betera-ot-realnyh-igrokov.html">Отзывы о казино Betera от реальных игроков</a></li>
+<li><a href="ostrova-antigua-i-barbada-protiv-ameriki.html">Острова Антигуа и Барбада против Америки.</a></li>
+<li><a href="otzyvy-o-kazino-auf-ot-realnyh-igrokov-2.html">Отзывы о казино AUF от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
