--- a/plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html
+++ b/plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.</title>
 <meta name="description" content="Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле. Юруслан Тойчубеков, председатель службы надзора и регулирования финансового рынка сегодня сообщил, что…">
-<link rel="canonical" href="https://casino-list.deno.dev/plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.</h1>
-<div class="card"><p><a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.<br><br><br><br>Юруслан Тойчубеков, председатель службы надзора и регулирования финансового рынка сегодня сообщил, что власти подумывают о строительстве собственного Города Греха в Иссыккуле. Кроме того, председатель сказал, что совместно с собственной командой они разрабатывают необходимый проект закона. Есть вероятность, что посещать игорные заведения в Иссыккуле смогут только граждане других стран. Чиновник планирует, что им удастся открыть не менее десяти игорных заведений.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.<br><br><br><br>Юруслан Тойчубеков, председатель службы надзора и регулирования финансового рынка сегодня сообщил, что власти подумывают о строительстве собственного Города Греха в Иссыккуле. Кроме того, председатель сказал, что совместно с собственной <a href="https://t.me/Kent_join_officiaL" target="_blank">https://t.me/Kent_join_officiaL</a> командой они разрабатывают необходимый проект закона. Есть вероятность, что посещать игорные заведения в Иссыккуле смогут только граждане других стран. Чиновник планирует, что им удастся открыть не менее десяти игорных заведений.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="piratskaya-zhizn-v-ghost-pirates-dnevnik-igor-na.html">Пиратская жизнь в «Ghost Pirates» ✌ Дневник @igor на</a></li>
-<li><a href="otzyvy-o-kazino-betera-ot-realnyh-igrokov-1.html">Отзывы о казино Betera от реальных игроков</a></li>
-<li><a href="ostrov-sokrovisch-teper-pereedet-v-podolsk.html">Остров сокровищ теперь переедет в Подольск.</a></li>
+<li><a href="otzyvy-o-kazino-betway-ot-realnyh-igrokov.html">Отзывы о казино Betway от реальных игроков</a></li>
+<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
+<li><a href="osobye-pravila-etiketa-pri-igre-v-ruletku-dnevnik-.html">Особые правила этикета при игре в рулетку ✌ Дневник @Tamila1 на</a></li>
 </ul></div>
 </body>
 </html>
