--- a/plody-nezavisimosti-ili-za-chto-borolis.html
+++ b/plody-nezavisimosti-ili-za-chto-borolis.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Плоды независимости, или За что боролись…</title>
 <meta name="description" content="Плоды независимости, или За что боролись… Когда-то те, кто ратовал за разрешение азартных игр на территориях проживания индейцев, объясняли свою позицию тем…">
-<link rel="canonical" href="https://casino-list.deno.dev/plody-nezavisimosti-ili-za-chto-borolis.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/plody-nezavisimosti-ili-za-chto-borolis.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Плоды независимости, или За что боролись…</h1>
-<div class="card"><p><a href="https://t.me/Pharaon_Zone_official" target="_blank">https://t.me/Pharaon_Zone_official</a> Плоды независимости, или За что боролись…<br><br><br><br>Когда-то те, кто ратовал за разрешение азартных игр на территориях проживания индейцев, объясняли свою позицию тем, что индейцы должны получить свободу от всяческого государственного надзора. Теперь казино, открытые на индейских землях, привлекают всё больше и больше посетителей, подобно самому Лас-Вегасу. Вместе с добропорядочными клиентами в эти игорные дома хлынули и опытные мошенники. Теперь представители индейских племён возмущены участившимися случаями обмана и мошенничества в казино, зная, что наказание преступникам не грозит: казино, которые официально выведены из-под контроля государства, не могут подключать власти к преследованию злоумышленников. Однако, несмотря на это, работники игорных домов всё равно просят помощи у властей – настолько сильно их мучит мошенничество. Вот она, оборотная сторона долгожданной полной свободы от государственного контроля.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Плоды независимости, или За что боролись…<br><br><br><br>Когда-то те, кто ратовал за разрешение азартных игр на территориях проживания индейцев, объясняли свою позицию тем, что индейцы должны получить свободу от всяческого государственного надзора. Теперь казино, открытые на индейских землях, привлекают всё больше и больше посетителей, подобно самому Лас-Вегасу. Вместе с добропорядочными клиентами в эти игорные дома хлынули и опытные мошенники. Теперь представители индейских племён возмущены участившимися случаями обмана и мошенничества в казино, зная, что наказание преступникам не грозит: казино, которые официально выведены из-под контроля государства, не могут подключать <a href="https://t.me/Pharaon_Zone_official" target="_blank">https://t.me/Pharaon_Zone_official</a> власти к преследованию злоумышленников. Однако, несмотря на это, работники игорных домов всё равно просят помощи у властей – настолько сильно их мучит мошенничество. Вот она, оборотная сторона долгожданной полной свободы от государственного контроля.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-bollywood-casino-ot-realnyh-igroko.html">Отзывы о казино Bollywood Casino от реальных игроков</a></li>
-<li><a href="otzyvy-o-kazino-betera-ot-realnyh-igrokov.html">Отзывы о казино Betera от реальных игроков</a></li>
-<li><a href="plata-s-odnogo-igrovogo-stola-v-kazino-v-kyrgyzsta.html">Плата с одного игрового стола в казино в Кыргызстане вырастет в 5 раз</a></li>
+<li><a href="plany-po-sozdaniyu-las-vegasa-v-kirgizii-v-issykku.html">Планы по созданию Лас-Вегаса в Киргизии, в Иссыккуле.</a></li>
+<li><a href="piratskaya-zhizn-v-ghost-pirates-dnevnik-igor-na.html">Пиратская жизнь в «Ghost Pirates» ✌ Дневник @igor на</a></li>
+<li><a href="pleytek-vypustit-igrovye-avtomaty-s-supergeroyami-.html">Плейтек выпустит игровые автоматы с супергероями от студии Warner Bros ✌ Дневник @igor на</a></li>
 </ul></div>
 </body>
 </html>
