--- a/pobeda-igroka-v-sude-las-vegasa.html
+++ b/pobeda-igroka-v-sude-las-vegasa.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победа игрока в суде Лас-Вегаса</title>
 <meta name="description" content="Победа игрока в суде Лас-Вегаса На днях в федеральном суде Лас-Вегаса был удовлетворён иск игрока из Калифорнии. По его утверждению казино «Париж» поступило…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeda-igroka-v-sude-las-vegasa.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeda-igroka-v-sude-las-vegasa.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победа игрока в суде Лас-Вегаса</h1>
-<div class="card"><p>Победа игрока в суде <a href="https://t.me/Lev_games_casinO" target="_blank">https://t.me/Lev_games_casinO</a> Лас-Вегаса<br><br><br><br>На днях в федеральном суде Лас-Вегаса был удовлетворён иск игрока из Калифорнии. По его утверждению казино «Париж» поступило нечестно по отношению к нему. По приговору суда, компания Park Place Entertainment, а именно ей принадлежит казино, должна оплатить истцу 8 миллионов долларов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победа игрока в суде Лас-Вегаса<br><br><br><br>На днях в федеральном суде Лас-Вегаса был удовлетворён иск игрока из Калифорнии. По его утверждению казино «Париж» поступило нечестно по отношению к нему. По приговору суда, компания Park Place Entertainment, а <a href="https://t.me/Lev_games_casinO" target="_blank">https://t.me/Lev_games_casinO</a> именно ей принадлежит казино, должна оплатить истцу 8 миллионов долларов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="osobennosti-razdachi-ochkov-loyalnosti-v-igrah-kaz.html">Особенности раздачи очков лояльности в играх казино ✌ Дневник @igor на</a></li>
-<li><a href="ostorozhno-kazino-manipuliruet-igrokami-dnevnik-ig.html">Осторожно! Казино манипулирует игроками! ✌ Дневник @igor на</a></li>
-<li><a href="plyusy-i-minusy-igrovyh-zavedeniy-s-minimalnym-dep.html">Плюсы и минусы игровых заведений с минимальным депозитом ✌ Дневник @Helens на</a></li>
+<li><a href="pechalnye-posledstviya-nechestnoy-igry-v-kazino-dn.html">Печальные последствия нечестной игры в казино ✌ Дневник @igor на</a></li>
+<li><a href="ot-pervobytnyh-razvlecheniy-do-segodnyashnih-kazin.html">От первобытных развлечений до сегодняшних казино ✌ Дневник @Olga1 на</a></li>
+<li><a href="otel-kazino-borgata-vstrechaet-svoego-millionnogo-.html">Отель-казино «Боргата» встречает своего миллионного клиента.</a></li>
 </ul></div>
 </body>
 </html>
