--- a/pobeda-leona-oganezova-v-kazino-evropa.html
+++ b/pobeda-leona-oganezova-v-kazino-evropa.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победа Леона Оганезова в казино "Европа".</title>
 <meta name="description" content="Победа Леона Оганезова в казино "Европа". Известный артист и музыкант Леон Оганезов 30 июля побывал в гостях у московского казино "Европа" и принял участие …">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeda-leona-oganezova-v-kazino-evropa.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeda-leona-oganezova-v-kazino-evropa.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победа Леона Оганезова в казино "Европа".</h1>
-<div class="card"><p>Победа Леона <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> Оганезова в казино "Европа".<br><br><br><br>Известный артист и музыкант Леон Оганезов 30 июля побывал в гостях у московского казино "Европа" и принял участие в еженедельной игре "Радиоказино". Сделав ставку на вторую дюжину, он выиграл 1.500 евро, после чего он заявил: "Я готов так играть каждый день". Затем он рассказал в прямом эфире "Русского Радио" о своем положительном отношении к азартным играм и исправил ведущего радио, называя казино "Европа" не только лучшим в Москве, а и вообще лучшим казино в мире.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победа Леона Оганезова в казино "Европа".<br><br><br><br>Известный артист и музыкант Леон Оганезов 30 июля побывал в гостях у московского казино "Европа" и принял участие в еженедельной игре "Радиоказино". Сделав ставку на вторую дюжину, он выиграл 1.500 евро, после <a href="https://t.me/Daddy_web_officiaL" target="_blank">https://t.me/Daddy_web_officiaL</a> чего он заявил: "Я готов так играть каждый день". Затем он рассказал в прямом эфире "Русского Радио" о своем положительном отношении к азартным играм и исправил ведущего радио, называя казино "Европа" не только лучшим в Москве, а и вообще лучшим казино в мире.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
 <li><a href="ostrova-antigua-i-barbada-protiv-ameriki.html">Острова Антигуа и Барбада против Америки.</a></li>
-<li><a href="ot-pokera-k-video-pokeru-dnevnik-foxbvv1-na.html">От покера к видео покеру ✌ Дневник @foxbvv1 на</a></li>
-<li><a href="ostavshiesya-kazino-v-moskve.html">Оставшиеся казино в Москве</a></li>
+<li><a href="pink-dzhek-novaya-versiya-blek-dzheka-s-uporom-na-.html">Пинк-джек – новая версия блек-джека с упором на благотворительность ✌ Дневник @NetGame на</a></li>
+<li><a href="otzyvy-o-kazino-888starz-ot-realnyh-igrokov.html">Отзывы о казино 888starz от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
