--- a/pobeda-pensionera-iz-francii-v-kazino.html
+++ b/pobeda-pensionera-iz-francii-v-kazino.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победа пенсионера из Франции в казино</title>
 <meta name="description" content="Победа пенсионера из Франции в казино Пенсионер из Франции выиграл в казино рекордно большую сумму: 9 420 903 евро. Счастливчик поведал, что из выигрыша он …">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeda-pensionera-iz-francii-v-kazino.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeda-pensionera-iz-francii-v-kazino.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победа пенсионера из Франции в казино</h1>
-<div class="card"><p><a href="﻿https://t.me/Booi_gift_Official" target="_blank">﻿https://t.me/Booi_gift_Official</a> Победа пенсионера из Франции в казино<br><br><br><br>Пенсионер из Франции выиграл в казино рекордно большую сумму: 9 420 903 евро. Счастливчик поведал, что из выигрыша он по миллиону раздаст детям, a также осуществит свою давнюю мечту – кругосветное путешествие. Помимо этого, в планы миллионера входит покупка Ягуара.<br><br>Победитель пенсионер поставил новый рекорд по выигрышам в французских казино, предыдущим была сумма в 5,5 миллионов евро.<br><br>Юлия присоединилась к команде  в 2010 году, став одним из первых авторов, кто системно освещал развитие онлайн-гемблинга в России и мире. За годы работы она создала тысячи материалов, фиксируя ключевые события: от легализации ставок в отдельных штатах США до появления первых криптовалютных казино.<br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победа пенсионера из Франции в казино<br><br><br><br>Пенсионер из Франции выиграл в казино рекордно большую сумму: 9 420 903 евро. Счастливчик поведал, что из выигрыша он по миллиону раздаст детям, a также осуществит свою давнюю мечту – кругосветное путешествие. Помимо этого, в планы миллионера входит покупка Ягуара.<br><br>Победитель <a href="﻿https://t.me/Booi_gift_Official" target="_blank">﻿https://t.me/Booi_gift_Official</a> пенсионер поставил новый рекорд по выигрышам в французских казино, предыдущим была сумма в 5,5 миллионов евро.<br><br>Юлия присоединилась к команде  в 2010 году, став одним из первых авторов, кто системно освещал развитие онлайн-гемблинга в России и мире. За годы работы она создала тысячи материалов, фиксируя ключевые события: от легализации ставок в отдельных штатах США до появления первых криптовалютных казино.<br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="ostorozhno-kappery-moshenniki-dnevnik-igor-na.html">Осторожно: капперы мошенники ✌ Дневник @igor на</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-ukraine-dnevnik-olg.html">Особенности игорного бизнеса в Украине ✌ Дневник @Olga1 на</a></li>
-<li><a href="plyusy-i-minusy-kazino-s-besplatnym-bonusom.html">Плюсы и минусы казино с бесплатным бонусом:</a></li>
+<li><a href="plyusy-i-minusy-avtopilota-dlya-igrovyh-avtomatov-.html">Плюсы и минусы автопилота для игровых автоматов ✌ Дневник @JoyCasino на</a></li>
+<li><a href="osobnyak-dlya-igrovyh-razvlecheniy-u-arbata.html">Особняк для игровых развлечений у Арбата</a></li>
+<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
 </ul></div>
 </body>
 </html>
