--- a/pobeda-v-onlayn-pokere-igrok-iz-interneta-triumfir.html
+++ b/pobeda-v-onlayn-pokere-igrok-iz-interneta-triumfir.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>"Победа в онлайн покере: игрок из Интернета триумфирует"</title>
 <meta name="description" content=""Победа в онлайн покере: игрок из Интернета триумфирует" В Лас–Вегасе в казино «Биньон» прошел 34-й ежегодный турнир «Мировой ряд Покера». Победителем стал …">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeda-v-onlayn-pokere-igrok-iz-interneta-triumfir.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeda-v-onlayn-pokere-igrok-iz-interneta-triumfir.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>"Победа в онлайн покере: игрок из Интернета триумфирует"</h1>
-<div class="card"><p>"Победа в <a href="https://t.me/Lux_center_casinO" target="_blank">https://t.me/Lux_center_casinO</a> онлайн покере: игрок из Интернета триумфирует"<br><br><br><br>В Лас–Вегасе в казино «Биньон» прошел 34-й ежегодный турнир «Мировой ряд Покера». Победителем стал человек, опыт которого появился вследствие игр в Интернете. Сумма выигрыша составила 2,5 миллионов долларов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>"Победа в онлайн покере: игрок из Интернета триумфирует"<br><br><br><br>В <a href="https://t.me/Lux_center_casinO" target="_blank">https://t.me/Lux_center_casinO</a> Лас–Вегасе в казино «Биньон» прошел 34-й ежегодный турнир «Мировой ряд Покера». Победителем стал человек, опыт которого появился вследствие игр в Интернете. Сумма выигрыша составила 2,5 миллионов долларов.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="pisatel-protiv-igornyh-domov.html">Писатель против игорных домов</a></li>
-<li><a href="otzyvy-o-kazino-avocado-ot-realnyh-igrokov-2.html">Отзывы о казино Avocado от реальных игроков</a></li>
-<li><a href="ostrov-mavrikiy-otkryt-dlya-azartnyh-turistov-dnev.html">Остров Маврикий открыт для азартных туристов ✌ Дневник @Olga1 на</a></li>
+<li><a href="osobennosti-poker-avtomata-aces-and-faces-dnevnik-.html">Особенности покер автомата «Aces and Faces» ✌ Дневник @Dak89 на</a></li>
+<li><a href="plavuchie-kazino-v-indiane-ne-bolee-chem-nazvanie.html">Плавучие казино в Индиане - не более чем название</a></li>
+<li><a href="otzyvy-o-kazino-avocado-ot-realnyh-igrokov-1.html">Отзывы о казино Avocado от реальных игроков</a></li>
 </ul></div>
 </body>
 </html>
