--- a/pobeditel-poluchit-priz-v-51-000.html
+++ b/pobeditel-poluchit-priz-v-51-000.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победитель получит приз в $51 000.</title>
 <meta name="description" content="Победитель получит приз в $51 000. С 15 по 30 апреля новое казино "Golden Garden", которое открылось в начале месяца в Санкт-Петербурге на Владимирском прос…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobeditel-poluchit-priz-v-51-000.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobeditel-poluchit-priz-v-51-000.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победитель получит приз в $51 000.</h1>
-<div class="card"><p>Победитель получит приз в $51 <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> 000.<br><br><br><br>С 15 по 30 апреля новое казино "Golden Garden", которое открылось в начале месяца в Санкт-Петербурге на Владимирском проспекте дом 9, будет проводить розыгрыш приза 51 000 долларов США среди своих клиентов. Финал будет проводится в последний день месяца и будет ознаменован роскошной праздничной развлекательной программой. Остальных гостей казино также ждут приятные дополнительные призы.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победитель получит приз в $51 000.<br><br><br><br>С 15 <a href="https://t.me/Stake_free_officiaL" target="_blank">https://t.me/Stake_free_officiaL</a> по 30 апреля новое казино "Golden Garden", которое открылось в начале месяца в Санкт-Петербурге на Владимирском проспекте дом 9, будет проводить розыгрыш приза 51 000 долларов США среди своих клиентов. Финал будет проводится в последний день месяца и будет ознаменован роскошной праздничной развлекательной программой. Остальных гостей казино также ждут приятные дополнительные призы.<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-bet-andreas-ot-realnyh-igrokov-1.html">Отзывы о казино Bet Andreas от реальных игроков</a></li>
-<li><a href="osobennosti-igornogo-biznesa-v-egipte-dnevnik-anna.html">Особенности игорного бизнеса в Египте ✌ Дневник @Anna на</a></li>
-<li><a href="plany-investorov-na-azov-siti.html">Планы инвесторов на «Азов-Сити»</a></li>
+<li><a href="osobennosti-bitkoin-kazino-dnevnik-anna-na.html">Особенности биткоин казино ✌ Дневник @Anna на</a></li>
+<li><a href="osobennye-usloviya-igry-dlya-hayrollerov-dnevnik-c.html">Особенные условия игры для хайроллеров ✌ Дневник @casino-x на</a></li>
+<li><a href="pleytek-prezentovali-novyy-produkt-cash-blox-dnevn.html">Плейтек презентовали новый продукт Cash Blox ✌ Дневник @Dak89 на</a></li>
 </ul></div>
 </body>
 </html>
