--- a/pobediteli-aukciona-otpravyatsya-v-azov-siti.html
+++ b/pobediteli-aukciona-otpravyatsya-v-azov-siti.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Победители аукциона отправятся в «Азов-сити»</title>
 <meta name="description" content="Победители аукциона отправятся в «Азов-сити» Победителями аукциона стали несколько столичных компаний Korston и «Сатурниус», «Бизнес-консалт» из Армавира, «…">
-<link rel="canonical" href="https://casino-list.deno.dev/pobediteli-aukciona-otpravyatsya-v-azov-siti.html">
+<link rel="canonical" href="https://casino-list.pynkt11.deno.net/pobediteli-aukciona-otpravyatsya-v-azov-siti.html">
 <style>
 body { font-family: Arial, sans-serif; background:#0f2027;color:#fff; padding:20px; }
 h1 { color:#ffd700; }
@@ -16,11 +16,11 @@ ul { padding-left:18px; }
 </head>
 <body>
 <h1>Победители аукциона отправятся в «Азов-сити»</h1>
-<div class="card"><p>Победители аукциона отправятся в «Азов-сити»<br><br><br><br>Победителями аукциона стали несколько столичных компаний Korston и «Сатурниус», «Бизнес-консалт» из Армавира, «Олимп» и «Виза МК», которые и получат право на застройку участка игорной зоны <a href="https://t.me/LUTRAN_login_officiaL" target="_blank">https://t.me/LUTRAN_login_officiaL</a> «Азов-Сити».<br><br><br><br><br><br><br><br><br><br><br> </p></div>
+<div class="card"><p>Победители аукциона отправятся в «Азов-сити» <a href="https://t.me/LUTRAN_login_officiaL" target="_blank">https://t.me/LUTRAN_login_officiaL</a><br><br><br><br>Победителями аукциона стали несколько столичных компаний Korston и «Сатурниус», «Бизнес-консалт» из Армавира, «Олимп» и «Виза МК», которые и получат право на застройку участка игорной зоны «Азов-Сити».<br><br><br><br><br><br><br><br><br><br><br> </p></div>
 <div class="card"><p>Читайте также:</p><ul>
-<li><a href="otzyvy-o-kazino-auf-ot-realnyh-igrokov-2.html">Отзывы о казино AUF от реальных игроков</a></li>
-<li><a href="osnovnye-pravila-ruletki-dnevnik-anna-na.html">Основные правила рулетки ✌ Дневник @Anna на</a></li>
-<li><a href="otzyvy-o-kazino-cafe-inbet-ot-realnyh-igrokov.html">Отзывы о казино Cafe Inbet от реальных игроков</a></li>
+<li><a href="osobennosti-ruletki-dnevnik-tamila1-na.html">Особенности рулетки ✌ Дневник @Tamila1 на</a></li>
+<li><a href="otzyvy-o-kazino-1xbet-ot-realnyh-igrokov-1.html">Отзывы о казино 1xBet от реальных игроков</a></li>
+<li><a href="platezhi-na-igornyh-saytah-na-chto-stoit-obratit-v.html">Платежи на игорных сайтах: на что стоит обратить внимание? ✌ Дневник @JoyCasino на</a></li>
 </ul></div>
 </body>
 </html>
